--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test chat</title>
     <link rel="stylesheet" type="" href="style.css">
     <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
